refactorings
error handling simplified and improved readability
fixed error code handling